@@ -277,6 +277,7 @@ static int record_exec(struct ast_channel *chan, void *data)
 			
 			if (res) {
 				ast_log(LOG_WARNING, "Problem writing frame\n");
+				ast_frfree(f);
 				break;
 			}
 			
@@ -295,16 +296,15 @@ static int record_exec(struct ast_channel *chan, void *data)
 					break;
 				}
 			}
-		}
-		if (f->frametype == AST_FRAME_VIDEO) {
+		} else if (f->frametype == AST_FRAME_VIDEO) {
 			res = ast_writestream(s, f);
 			
 			if (res) {
 				ast_log(LOG_WARNING, "Problem writing frame\n");
+				ast_frfree(f);
 				break;
 			}
-		}
-		if ((f->frametype == AST_FRAME_DTMF) &&
+		} else if ((f->frametype == AST_FRAME_DTMF) &&
 		    (f->subclass == terminator)) {
 			ast_frfree(f);
 			break;
